--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -8,6 +8,9 @@
         <div class="profile-container">
             <img src="../../images/avatars/<%= user.avatar  %> " alt="">
         </div>
+        <div>
+            <p><%= user.email  %> </p>
+        </div>
     </main>
     <%-include('../partials/footer')  %> 
 </body>
