--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <nav class="barra-navegacion">
         <div class="logo-container">
             <a href="/">
-                <img src="../../images/Home/Central Music Logo.svg" alt="logo">
+                <img src="/../images/Home/Central Music Logo.svg" alt="logo">
             </a>
             <ul class="menu-header">
                 <li><a href="/products/guitars">Guitars</a></li>
@@ -14,7 +14,7 @@
             </ul>
         </div>
         <div class="menu-burger">
-            <img src="../../images/Home/burger.svg" alt="burger">
+            <img src="/../images/Home/burger.svg" alt="burger">
             <% if (locals.userIsLogged) { %>
                 <div class="icons-container">
                     <a href="/products/carrito">
