--- a/public/CSS/profile.css
+++ b/public/CSS/profile.css
@@ -1,1 +1,49 @@
+.profile-container {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    margin: 10px auto;
+}
 
+.profile .btn-style {
+    margin-bottom: 15px;
+}
+    
+.profile-container img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%
+   
+}
+
+.user_info-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.user_info-container h3 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
+
+@media (min-width: 768px) {
+    .profile .welcome_user {
+        font-size: 30px;
+    }
+    .user_info-container {
+        font-size: 25px;
+    }
+
+    .profile .btns-container {
+        height: 57px;
+    }
+
+    .profile .btn-style {
+        height: 50px;
+        width: 200px;
+    }
+
+}
