--- a/src/views/admin/products/listProducts.ejs
+++ b/src/views/admin/products/listProducts.ejs
@@ -32,16 +32,26 @@
                         <td><%- product.stock %></td>
                         <td>
 
-                            <% if (product.category === 'guitar') { %>
+                            <% if (product.subcategories.name === 'Guitarras Electricas') { %>
                                 <a href="/admin/products/guitar/edit/<%- product.id %> " class="btn-edit">
                                     <i class="fa-solid fa-pen"></i>
                                 </a>
-                            <% } else { %> 
+                            <% } else if  (product.subcategories.name === 'Accesorios') { %> 
                                 <a href="/admin/products/accesory/edit/<%- product.id %> " class="btn-edit">
                                     <i class="fa-solid fa-pen"></i>
                                 </a>
                             
-                            <% } %>  
+                            <% } else if (product.subcategories.name === 'Pedales'){ %>
+                                <a href="/admin/products/pedal/edit/<%- product.id %> " class="btn-edit">
+                                    <i class="fa-solid fa-pen"></i>
+                                </a>
+                            
+                            <% } else if (product.subcategories.name === 'Cables para instrumentos') { %>
+                                <a href="/admin/products/cable/edit/<%- product.id %> " class="btn-edit">
+                                    <i class="fa-solid fa-pen"></i>
+                                </a>
+                            <% } %>    
+
                                 <form action="/admin/products/delete/<%- product.id %>?_method=DELETE" method="POST">
                                     <button class="btn-danger">
                                         <i class="fa-solid fa-xmark fa-lg"></i>
